@@ -1,6 +1,6 @@
 o.js
 ====
 
-Javascript utility belt for rich objects and prototypes. Ooooh!
+JavaScript utility belt for rich objects and prototypes. Ooooh!
 
 Please visit the website for more information: http://o-js.com
